# quasar-svm

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml
bindings/node/src/: address.ts  base.ts  ffi.ts  index.ts  programs.ts  result.ts
bindings/node/src/kit/: index.ts  types.ts  wire.ts
bindings/node/src/web3js/: index.ts  types.ts  wire.ts
docs/: accounts.md  api.md  tokens.md
ffi/src/: ffi.rs  wire.rs
include/: quasar_svm.h
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
svm/: Cargo.toml
svm/benches/: svm_bench.rs
svm/src/: error.rs  lib.rs  svm.rs  token.rs
