[workspace]
members = ["svm", "ffi"]
resolver = "2"
exclude = [
    "bindings",
    "npm",
    "include",
    "programs",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Keep bench profile aligned with release but allow debug symbols for profiling
[profile.bench]
inherits = "release"
strip = false
